<resources>
    <string name="app_name">NoteApp</string>
    <string name="action_settings">Settings</string>
    <string name="add_note">Add Note</string>
    <string name="fragment_notes_label">Notes</string>
    <string name="fragment_edit_label">Edit Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="creation_date">Creation Date :</string>
    <string name="example_date">26.03.2023</string>
    <string name="edited">Edited :</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="note_image">Note Image</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="image_url">Image URL</string>
    <string name="enter_image_url">Enter Image URL</string>
    <string name="save">Save</string>
    <string name="delete_message">Are You Aure You Want to Delete?</string>
    <string name="option_menu">Menu</string>
    <string name="edit_text">Edit</string>
    <string name="delete">Delete</string>
    <string name="please_add_notes">Please Add Notes</string>
    <string name="notes_title">Notes</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="new_note_title">New Note</string>
</resources>