<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height= "120dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="10dp"
        android:padding="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="5dp"
            android:weightSum="10">

            <ImageView
                android:id="@+id/imgNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/icn_note"
                android:contentDescription="@string/note_image"
                android:layout_weight="2"
                android:scaleType="center"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="7"
                android:layout_marginStart="5dp">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtCreationDateTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/creation_date"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/txtCreationDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/example_date"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginStart="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtIsEditedTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edited"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/txtIsEdited"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginStart="5dp"/>

                </LinearLayout>

            </LinearLayout>

            <ImageButton
                android:id="@+id/btnOptions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_more"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/option_menu" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>